# rig

./: Cargo.toml  README.md
.claude/: settings.local.json
rig-core/: Cargo.toml  MCP_INTEGRATION_GUIDE.md
rig-core/examples/: MCP_EXAMPLES.md  mcp_with_claude.rs  mcp_with_gemini.rs
rig-core/src/: lib.rs  mcp.rs
rig-core/src/client/: builder.rs
rig-core/src/providers/: chatglm.rs  dashscope.rs  mod.rs  siliconflow.rs  vercel_ai_gateway.rs  volces.rs  z_ai.rs
rig-core/src/providers/siliconflow/: image_generation.rs
rig-libsql/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rig-libsql/examples/: vector_search_libsql.rs
rig-libsql/src/: lib.rs
rig-libsql/tests/: integration_test.rs
rig/rig-core/examples/: agent_with_skills.rs
rig/rig-core/src/agent/: SKILLS.md  builder.rs  mod.rs  skill.rs
