[package]
name = "rig-libsql"
version = "0.1.0"
edition = { workspace = true }
description = "Turso libSQL-based vector store implementation for the rig framework"
license = "MIT"

[lib]
doctest = false

[dependencies]
rig-core = { path = "../rig-core", version = "0.24.0", default-features = false, features = ["derive"] }
libsql = { version = "0.9", default-features = false, features = ["core", "parser", "remote", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlite-vec = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpmock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
